First AngJS Aplication

--- a/categories.html
+++ b/categories.html
@@ -48,6 +48,7 @@
                 <th>Code</th>
                 <th>Intial</th>
                 <th>Name</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
