--- a/tables.html
+++ b/tables.html
@@ -50,6 +50,7 @@
                 <th>Code</th>
                 <th>Seat</th>
                 <th>Description</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
