--- a/users.html
+++ b/users.html
@@ -61,6 +61,7 @@
                 <th>BadgeId</th>
                 <th>Nick</th>
                 <th>Fullname</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
